--- a/notes/tsconfig.json
+++ b/notes/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2017",
+    "target": "ESNext",
     // "outDir": "lib",
     "declaration": true,
     "sourceMap": true
